--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,35 @@
 @import url("./reset.css");
 @import url("./main.css");
 
+.data-table-container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    /* width: 50%; */
+}
+
+th {
+    font-weight: bolder;
+    background-color:darkslategrey;
+    color: white;
+
+}
+
+th, td {
+    /* display: inline-block; */
+    padding: 20px 30px;
+}
+
+tr:hover {
+    background-color:antiquewhite
+}
+
+table {
+    margin: 0 auto;
+}
+
 .page-item {
     display: inline-block;
-    padding: 10px;
+    padding: 8px 16px;
     background-color: #CCCCCC;
 }
 
@@ -12,5 +38,48 @@
 }
 
 .pagination-box {
-    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.page-item:hover {
+    background-color:rgb(103, 124, 124);
+    color: white;
+    cursor: pointer;
+}
+
+.page-item.page-active {
+    background-color: rgb(103, 124, 124);
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
+    color: white;
+}
+
+.count-field {
+    display: inherit;
+    margin: 20px auto 5px;
+    padding: 10px;
+    /* margin-top: 14px; */
+    width: 60px;
+    border: 2px solid rgb(103, 124, 124);
+    border-radius: 10px;
+
+}
+
+.page-count-info button{
+    display: inline-block;
+    border: 2px solid rgb(103, 124, 124);
+    padding: 8px 12px;
+    border-radius: 10px;
+}
+
+.page-count-info button:hover {
+    border: 1px solid rgb(103, 124, 124);
+    border-radius: 10px;
+    color: white;
+    background-color:rgb(103, 124, 124);
+    cursor: pointer;
+}
+
+.page-count-info {
+    text-align: center;
 }
