--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,139 +4,84 @@
 .data-table-container {
     margin-top: 30px;
     margin-bottom: 30px;
-    /* width: 50%; */
 }
 
-th {
-    position: relative;
+.th__item {
     font-weight: bolder;
     background-color:darkslategrey;
     color: white;
 }
 
-th, td {
-    /* display: inline-block; */
+.th__item, .td__item {
     padding: 20px 30px;
 }
 
-tr:hover {
+.data__row:hover {
     background-color:antiquewhite
 }
 
-table {
+.datatable {
     margin: 0 auto;
 }
 
-.page-item {
+.page__item {
     display: inline-block;
     padding: 8px 16px;
     background-color: #CCCCCC;
 }
 
-.page-item:not(:last-child){
+.page__item:not(:last-child){
     margin-right:20px;
 }
 
-.pagination-box {
+.pagination__box {
     text-align: center;
     margin-bottom: 30px;
 }
 
-.page-item:hover {
+.page__item:hover {
     background-color:rgb(103, 124, 124);
     color: white;
     cursor: pointer;
 }
 
-.page-item.page-active {
+.page__item.page__item--active {
     background-color: rgb(103, 124, 124);
     box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
     color: white;
 }
 
-.count-field {
+.label {
     display: inherit;
-    margin: 20px auto 5px;
-    padding: 10px;
-    /* margin-top: 14px; */
-    width: 70px;
-    border: 2px solid rgb(103, 124, 124);
-    border-radius: 10px;
-
-}
-
-.page-count-info button{
-    display: inline-block;
-    border: 2px solid rgb(103, 124, 124);
-    padding: 8px 12px;
-    border-radius: 10px;
-}
-
-.page-count-info button:hover {
-    border: 1px solid rgb(103, 124, 124);
-    border-radius: 10px;
-    color: white;
-    background-color:rgb(103, 124, 124);
-    cursor: pointer;
-}
-
-.page-count-info {
     text-align: center;
+    margin-top: 30px;
 }
 
-label {
-display: inherit;
-text-align: center;
-margin-top: 30px;
-}
-
-label select {
+.label select {
     border: 1px solid rgb(103, 124, 124);
     background-color:rgb(237, 245, 245);
-    /* color: white; */
     padding: 10px 15px;
     border-radius: 10px;
 
 }
 
-label option {
+.label option {
     border: 1px solid rgb(103, 124, 124);
     background-color:rgb(103, 124, 124);
     color: white;
 }
 
-input {
-    border: 1px solid rgb(103, 124, 124);
-    background-color:rgb(234, 244, 244);
-    display: inherit;
-    text-align: center; 
-}
-
-.arrow-icon {
-    display: inline-block;
-    background-color: white;
-    width: 20px;
-    height: 20px;
-    margin-left: 20px;
-}
-
-.block-option {
-    position: absolute;
-    /* display: none; */
-    right: 0;
-    bottom: 0;
-}
-
-.block-option.active {
-    display: block;
-}
-
-  td button {
+.data__row button {
     border: none;
     cursor: pointer;
   }
 
-.check {
-    background-color: rgba(47, 79, 79, 0.671);
+.search__field {
+    display: block;
+    margin: 0 auto 30px;
+    padding: 0 10px;
+    height: 36px;
+    width: 200px;
+    background-color: #ffffff;
+    border: 1px solid rgb(103, 124, 124);
 }
-
